--- a/style.css
+++ b/style.css
@@ -46,8 +46,8 @@ padding: 0;
 
 .placeholder_container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: flex-end;
+    flex-direction: row;
 }
 
 .work-container {
@@ -69,3 +69,9 @@ padding: 0;
     display: flex;
     flex-direction: column;
 }
+
+.break {
+    flex-basis: 100%;
+    height: 0;
+  }
+
