--- a/style.css
+++ b/style.css
@@ -52,11 +52,11 @@ padding: 0;
 
 .work-container {
     display: flex;
+    flex-direction: column;
 }
 
 .larger_image {
     display: flex;
-    flex-wrap: wrap;
     justify-content: flex-end;
 }
 
@@ -70,8 +70,34 @@ padding: 0;
     flex-direction: column;
 }
 
-.break {
-    flex-basis: 100%;
-    height: 0;
+.image_1 {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
   }
+
+  .image_2 {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+  }
+
+  .class_project {
+    display: flex;
+  }
+
+body {
+    display: flex;
+    flex-direction: column;
+    width:100%;
+}
+
+.class_project {
+    display:flex;
+    justify-content: flex-end;
+}
+
+.box {
+ padding: 2%;
+}
 
